# poly

./: .gitignore  ARCHITECTURE.md  CODEX_GUIDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RUNBOOK.md  SECURITY.md  Upstreams.md  data_schema.md  spec.md
.cargo/: config.toml
.github/workflows/: ci.yml  rust-ci.yml
crates/admin_ipc/: Cargo.toml
crates/admin_ipc/src/: lib.rs
crates/admin_ipc/tests/: admin_ipc_integration.rs
crates/arbiter/: Cargo.toml
crates/arbiter/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/sim/: Cargo.toml
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/strategies/: Cargo.toml
crates/strategies/src/: lib.rs
crates/venue_polymarket/: Cargo.toml
migrations/postgres/: 0001_init.sql
migrations/sqlite/: 0001_init.sql
scripts/: init_db.sql
services/traderctl/: Cargo.toml
services/traderctl/src/: main.rs
services/traderd/: Cargo.toml
services/traderd/src/: main.rs  sqlite_paths_tests.rs
