[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "migrate"] }
chrono = "0.4"
hostname = "0.3"
uuid.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
