[workspace]
members = [
  "services/traderd",
  "services/traderctl",
  "crates/metrics",
  "crates/storage",
  "crates/execution",
  "crates/state",
  "crates/strategies",
  "crates/arbiter",
  "crates/risk",
  "crates/venue_polymarket",
  "crates/sim",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
