[package]
name = "traderd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap = { workspace = true, features = ["derive"] }
admin_ipc = { path = "../../crates/admin_ipc" }
metrics = { path = "../../crates/metrics" }
storage = { path = "../../crates/storage", features = ["postgres"] }
risk = { path = "../../crates/risk" }
